# embedded_project

./: CMakeLists.txt  README.md  encoder.c  encoder.h  line_sensor.c  line_sensor.h  main.c  motor.c  motor.h  pid.c  pid.h  ultrasonic.c
car/: CMakeLists.txt
car/car_project/: CMakeLists.txt  barcode.c  barcode.h  encoder.c  line_sensor.c  main.c  pid.c  pid.h  ultrasonic.h
car/project/: CMakeLists.txt  barcode.h  line_sensor.h  main.c  motor.h  ultrasonic.c
remote/: CMakeLists.txt
remote/remote_control/: CMakeLists.txt  main(backup).c  main.c
wifi/: CMakeLists.txt
wifi/dashboard/: CMakeLists.txt  dashboard.c  lwipopts.h
